--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -131,7 +131,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="愛做家事的一家人" placeholder="輸入新目標" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qoq-qg-ipi" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="資料載入中" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qoq-qg-ipi" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
                                 <rect key="frame" x="25" y="302" width="330" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="vRO-Fp-M7h"/>
@@ -165,8 +165,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="HomeMates" placeholder="輸入新目標" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rrt-Kc-BxC" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="25" y="386" width="92" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="資料載入中" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rrt-Kc-BxC" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                <rect key="frame" x="25" y="386" width="86" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="zEe-mT-jjb"/>
                                 </constraints>
@@ -214,6 +214,12 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d6C-au-POT">
+                                <rect key="frame" x="273" y="354" width="62" height="30"/>
+                                <state key="normal" title="退出群組">
+                                    <color key="titleColor" name="Y4"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -231,6 +237,7 @@
                             <constraint firstItem="cor-AS-tax" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="25" id="UfT-cI-YyX"/>
                             <constraint firstItem="qyg-Bl-KSX" firstAttribute="top" secondItem="3YC-Nz-e5s" secondAttribute="top" constant="120" id="Uta-2D-OQF"/>
                             <constraint firstItem="qoq-qg-ipi" firstAttribute="leading" secondItem="cor-AS-tax" secondAttribute="leading" id="WDo-OY-dq9"/>
+                            <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="d6C-au-POT" secondAttribute="trailing" constant="40" id="XJl-AK-CJ0"/>
                             <constraint firstItem="fHl-Y3-25R" firstAttribute="centerX" secondItem="f96-Yt-DsY" secondAttribute="centerX" id="YIN-ku-7Vw"/>
                             <constraint firstItem="GXt-6Y-rXV" firstAttribute="top" secondItem="cor-AS-tax" secondAttribute="bottom" constant="12" id="YWG-8t-xhm"/>
                             <constraint firstItem="27r-Bf-TAR" firstAttribute="leading" secondItem="5vT-d9-BcQ" secondAttribute="leading" id="azO-nC-4WR"/>
@@ -241,6 +248,7 @@
                             <constraint firstItem="TK0-Hm-ZDa" firstAttribute="leading" secondItem="9i8-lp-015" secondAttribute="leading" id="v3L-l1-mEY"/>
                             <constraint firstItem="Rrt-Kc-BxC" firstAttribute="leading" secondItem="qoq-qg-ipi" secondAttribute="leading" id="vIT-GV-RLq"/>
                             <constraint firstItem="qyg-Bl-KSX" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="20" id="wwZ-Il-fuT"/>
+                            <constraint firstItem="d6C-au-POT" firstAttribute="centerY" secondItem="5vT-d9-BcQ" secondAttribute="centerY" id="yf5-ZP-qNe"/>
                             <constraint firstItem="fHl-Y3-25R" firstAttribute="top" secondItem="3YC-Nz-e5s" secondAttribute="top" constant="10" id="znQ-yQ-gnn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3YC-Nz-e5s"/>
