--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -273,6 +273,64 @@
             </objects>
             <point key="canvasLocation" x="1980" y="117.39130434782609"/>
         </scene>
+        <!--Profile Info View Controller-->
+        <scene sceneID="uno-lI-lH1">
+            <objects>
+                <viewController id="WV6-pT-5IP" customClass="ProfileInfoViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LUW-dg-SzH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TLB-ij-6E0">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fCf-5T-GUR">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="44"/>
+                                        <state key="normal" title="個人資訊">
+                                            <color key="titleColor" name="Y4"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaw-0a-nmg">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="44"/>
+                                        <state key="normal" title="群組資訊">
+                                            <color key="titleColor" name="Y4"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="Y1"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="eaw-0a-nmg" secondAttribute="bottom" id="1rZ-um-g6I"/>
+                                    <constraint firstAttribute="trailing" secondItem="eaw-0a-nmg" secondAttribute="trailing" id="1uZ-Du-duW"/>
+                                    <constraint firstItem="fCf-5T-GUR" firstAttribute="width" secondItem="eaw-0a-nmg" secondAttribute="width" id="786-oQ-Mhg"/>
+                                    <constraint firstItem="fCf-5T-GUR" firstAttribute="leading" secondItem="TLB-ij-6E0" secondAttribute="leading" id="H16-P1-KCb"/>
+                                    <constraint firstAttribute="height" constant="44" id="c9V-Xg-N44"/>
+                                    <constraint firstItem="eaw-0a-nmg" firstAttribute="top" secondItem="TLB-ij-6E0" secondAttribute="top" id="cSq-v4-Ntb"/>
+                                    <constraint firstItem="fCf-5T-GUR" firstAttribute="top" secondItem="TLB-ij-6E0" secondAttribute="top" id="dy0-80-Ldd"/>
+                                    <constraint firstAttribute="bottom" secondItem="fCf-5T-GUR" secondAttribute="bottom" id="ur6-a6-sa4"/>
+                                    <constraint firstItem="eaw-0a-nmg" firstAttribute="leading" secondItem="fCf-5T-GUR" secondAttribute="trailing" id="wVA-g6-fUu"/>
+                                </constraints>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JQB-Ct-Re0">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TLB-ij-6E0" firstAttribute="top" secondItem="SMX-kh-Syq" secondAttribute="top" id="2Dl-rq-P8s"/>
+                            <constraint firstItem="SMX-kh-Syq" firstAttribute="trailing" secondItem="JQB-Ct-Re0" secondAttribute="trailing" id="54A-Oq-hyl"/>
+                            <constraint firstItem="SMX-kh-Syq" firstAttribute="bottom" secondItem="JQB-Ct-Re0" secondAttribute="bottom" id="6At-HB-BaH"/>
+                            <constraint firstItem="JQB-Ct-Re0" firstAttribute="leading" secondItem="SMX-kh-Syq" secondAttribute="leading" id="P19-6V-G5o"/>
+                            <constraint firstItem="JQB-Ct-Re0" firstAttribute="top" secondItem="TLB-ij-6E0" secondAttribute="bottom" id="eV1-G9-dGH"/>
+                            <constraint firstItem="TLB-ij-6E0" firstAttribute="leading" secondItem="SMX-kh-Syq" secondAttribute="leading" id="p8X-9I-Xd8"/>
+                            <constraint firstItem="SMX-kh-Syq" firstAttribute="trailing" secondItem="TLB-ij-6E0" secondAttribute="trailing" id="tJb-ky-TW7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="SMX-kh-Syq"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ckQ-0V-uOc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2876" y="117"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="KlG-H9-kJv">
             <objects>
